<resources>

    <string name="app_name">DandelionDentist</string>

    <string name="login">Вход</string>
    <string name="continue_without_login"><u>Продолжить без входа</u></string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="your_email_adress">Ваш электронный адрес</string>
    <string name="your_password">Ваш пароль</string>
    <string name="login_button_text">Войти!</string>
    <string name="registration_underlined"><u>Регистрация</u></string>
    <string name="fio">ФИО</string>
    <string name="fio_edittext_hint">Ваше имя, фамилия и отчество</string>
    <string name="already_account">Есть аккаунт?</string>

    <string name="login_underlined"><u>Войти</u></string>
    <string name="register_button_text">Зарегистрироваться!</string>

    <string name="search">Поиск</string>
    <string name="appointments">Записи</string>
    <string name="prescriptions">Рецепты</string>
    <string name="profile">Профиль</string>

    <string name="welcome_speech_one">Найди врача мечты и\nдобросовестную клинику</string>
    <string name="welcome_speech_two">В приложении есть много\nвысококачественных врачей и клиник</string>
    <string name="continue_button_text">Продолжить!</string>
    <string name="searchview_hint">Услуга, врач, клиника...</string>

    <string name="services">Услуги</string>
    <string name="medics">Врачи</string>
    <string name="clinics">Клиники</string>

    <string name="hello_blank_fragment">iuergiueggiuegriubegh</string>

    <string name="MC_template"><u>Подробнее о МЦ</u></string>

    <string name="review_amount"><u>12 отзывов</u></string>

</resources>