<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="132dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:fontFamily="@font/mont_bold"
        android:layout_marginLeft="12dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fio"
        android:textSize="14sp"
        android:fontFamily="@font/mont_regular"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_fio_edittext"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/edit_text_hint"
        android:hint="@string/fio_edittext_hint"
        android:fontFamily="@font/mont_regular"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:fontFamily="@font/mont_regular"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:id="@+id/register_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/edit_text_hint"
        android:hint="@string/your_email_adress"
        android:fontFamily="@font/mont_regular"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:fontFamily="@font/mont_regular"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:maxLines="1"
        android:id="@+id/register_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/edit_text_hint"
        android:hint="@string/your_password"
        android:fontFamily="@font/mont_regular"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:fontFamily="@font/mont_regular"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:layout_marginLeft="12dp"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:clickable="true"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:text="@string/register_button_text"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:fontFamily="@font/mont_bold"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/already_account"
            android:fontFamily="@font/mont_regular"
            android:textColor="@color/dark_grey"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_from_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login_underlined"
            android:fontFamily="@font/mont_regular"
            android:textColor="@color/main"
            android:clickable="true"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="97dp"
        android:layout_height="11dp"
        android:src="@drawable/dandelion"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        />





</androidx.appcompat.widget.LinearLayoutCompat>